# imtools

./: .clang-format  CMakeLists.txt  README.md  main.cpp  vcpkg.json
lib/imgui_node_editor/: CMakeLists.txt  imgui_extra_math.h  imgui_extra_math.inl  imgui_node_editor.cpp  imgui_node_editor_internal.h
src/imtools/: CMakeLists.txt  log_window.cpp  log_window.h  main.cpp  node.cpp  node.h  process_node.cpp  process_node.h  script_python.cpp  script_python.h  types.h
src/test/: template.py  test.cpp
